--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .profile-pic {
-    background-image: url('../images/Sachi-2.png');
+    background-image: url('https://raw.githubusercontent.com/eternalGatherings/personal-db/refs/heads/main/images/Sachi-1.png');
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -146,12 +146,12 @@ body {
 }
 
 .email-button {
-    padding: 0 40px;
+    padding: 0 65px;
     background-color: #fff;
 }
 
 .linkedin-button {
-    padding: 0 30px;
+    padding: 0 55px;
     background-color: #5093E2;
     color: #fff;
 }
@@ -183,10 +183,10 @@ body {
     }
 
     .profile-pic {
-        background-image: url('../images/Sachi-1.jpg');
+        background-image: url('https://raw.githubusercontent.com/eternalGatherings/personal-db/refs/heads/main/images/Sachi-2.jpg');
         background-size: cover;
         width: 100%;
-        height: 50%;
+        height: 60%;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -202,6 +202,10 @@ body {
 
     .name {
         font-size: 30px;
+    }
+
+    .name-designation {
+        padding: 10px 0;
     }
 
     .designation {
@@ -235,13 +239,14 @@ body {
 
     .about-other {
         width: 85%;
+        padding: 10px 0;
     }
     .about .header {
         font-size: 20px;
     }
 
     .about .paragraph {
-        font-size: 10px;
+        font-size: 8px;
         font-weight: 100;
     }
 
@@ -271,7 +276,7 @@ body {
     }
 
     .profile-pic {
-        background-image: url('../images/Sachi-1.jpg');
+        background-image: url('https://raw.githubusercontent.com/eternalGatherings/personal-db/refs/heads/main/images/Sachi-2.jpg');
         background-size: cover;
         width: 100%;
         height: 80%;
@@ -290,6 +295,10 @@ body {
 
     .name {
         font-size: 55px;
+    }
+
+    .name-designation {
+        padding: 10px 0;
     }
 
     .designation {
@@ -323,6 +332,7 @@ body {
 
     .about-other {
         width: 85%;
+        padding: 10px 0;
     }
     .about .header {
         font-size: 30px;
